--- a/style.css
+++ b/style.css
@@ -34,6 +34,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
+    gap: 5rem;
 }
 .card-container {
     display: flex;
@@ -43,11 +44,20 @@ body {
 }
 
 .card {
-    width: 20rem;
-    height: 20rem;
+    width: 15vw;
+    height: 15vw;
     border: 2px solid black;
     margin: 2px 0;
     display: flex;
     justify-content: center;
     align-items: center;
+}
+@media (max-width:657px) {
+    .card-container {
+        flex-direction: column;
+    }
+    .card {
+        width: 80vw;
+        height: 50vh;
+    }
 }
